# insomnia

./: CMakeLists.txt  SleepCheckPlugin.cpp  run_module_tests.sh  run_tests.sh
test/: spinlock_demo.c  test_basic.c  test_builtin.c  test_force_nosleep.c  test_fptr.c  test_goto_nosleep.c  test_nested_nosleep.c  test_nosleep_block.c  test_nosleep_cleanup.c  test_nosleep_enter.c  test_nosleep_raii.cpp  test_rule4.c  test_rule5.c  test_rule6.c  test_rule7.c
test/modules/: sleepmod.cppm  test_import_enter_exit.cpp  test_import_explicit.cpp  test_import_implicit.cpp
